--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -6,6 +6,10 @@
     font-size: var(--l-font);
 }
 
+.noraml-heading-font {
+    font-size: var(--m-font);
+}
+
 .normal-font {
     font-size: var(--sm-font);
 }
@@ -19,10 +23,13 @@ ul li {
     color: #999999
 }
 
+
+/* -------------footer-css----------- */
+
 .footer-download-container {
     background-color: #FAB84C;
-    height: 80px;
-    width: 300px;
+    height: 8rem;
+    width: 30rem;
 }
 
 .footer-download-icons {
@@ -37,4 +44,90 @@ ul li {
 
 .font-weight-bolder {
     font-weight: bolder;
+}
+
+.food-background {
+    background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url("/src/components/Images/food.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* opacity: 0.5; */
+}
+
+
+/* ------------listingcards-------------- */
+
+.card {
+    position: relative;
+    height: 30rem;
+    width: 57rem;
+    border-radius: 2rem;
+    overflow: hidden;
+    margin: auto;
+}
+
+.card-image-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 70%;
+}
+
+.card-image {
+    height: 80%;
+    width: 100%;
+    z-index: 1;
+}
+
+.card-image-footer {
+    position: absolute;
+    bottom: 0;
+    height: 20%;
+    width: 100%;
+    background: #f6c12a;
+    z-index: 1;
+    padding-left: 1rem;
+    color: white;
+}
+
+.card-details {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 60%;
+    z-index: 1;
+    background: rgb(245, 225, 147);
+    padding-left: 1.5rem;
+    -webkit-clip-path: polygon(40% 0, 100% 0, 100% 100%, 0% 100%);
+    clip-path: polygon(45% 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+.card-details-container {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    background: white;
+    -webkit-clip-path: polygon(40% 0, 100% 0, 100% 100%, 0% 100%);
+    clip-path: polygon(47% 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+.card-details-footer {
+    position: absolute;
+    bottom: 0px;
+    height: 20%;
+    width: 100%;
+    background: #e3493a;
+}
+
+.card-details-container-padding {
+    padding-left: 14rem;
+}
+
+.icons-circle {
+    height: 2rem;
+    width: 2rem;
+    background-color: red;
+    border-radius: 50%;
 }
