--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -63,49 +63,48 @@ ul li {
 
 .card {
     position: relative;
-    height: 28rem;
+    height: 40rem;
     width: 50rem;
     border-radius: 2rem;
     overflow: hidden;
     margin: auto;
+    box-shadow: 0px 1px 5px 1px #e0e0e0;
 }
 
 .card-image-container {
     position: relative;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 70%;
+    width: 100%;
+    height: 24rem;
+    border-radius: 2rem;
 }
 
 .card-image {
-    height: 80%;
     width: 100%;
-    z-index: 1;
+    height: 100%;
+    border-radius: 2rem;
 }
 
 .card-image-footer {
     position: absolute;
     bottom: 0;
-    height: 20%;
     width: 100%;
     background: #f6c12a;
-    z-index: 1;
     padding-left: 1rem;
     color: white;
+    border-radius: 0 0 2rem 2rem;
+    height: 4rem;
+}
+
+.card-footer {
+    position: absolute;
+    bottom: 0;
+    height: 4rem;
+    width: 100%;
+    background: #e3493a;
 }
 
 .card-details {
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 100%;
-    width: 60%;
-    z-index: 1;
-    background: rgb(245, 225, 147);
-    padding-left: 1.5rem;
-    -webkit-clip-path: polygon(40% 0, 100% 0, 100% 100%, 0% 100%);
-    clip-path: polygon(45% 0, 100% 0, 100% 100%, 0% 100%);
+    padding: 1.5rem;
 }
 
 .card-details-container {
@@ -115,14 +114,6 @@ ul li {
     background: white;
     -webkit-clip-path: polygon(40% 0, 100% 0, 100% 100%, 0% 100%);
     clip-path: polygon(47% 0, 100% 0, 100% 100%, 0% 100%);
-}
-
-.card-details-footer {
-    position: absolute;
-    bottom: 0px;
-    height: 20%;
-    width: 100%;
-    background: #e3493a;
 }
 
 .card-details-container-padding {
@@ -348,4 +339,106 @@ ul li {
     width: 12rem;
     height: 5rem;
     border-radius: 1rem;
+}
+
+
+/* -------------Login-------------------- */
+
+.login-container-left {
+    height: 100vh;
+    background-color: #FAB84C;
+    padding: 5rem;
+}
+
+.login-container-right {
+    height: 100vh;
+    padding: 5rem;
+    text-align: center;
+}
+
+.login-tab-btn {
+    border: none;
+    background: none;
+    width: 30rem;
+    height: 5rem;
+    border-top: 0.2rem solid #FAC05E;
+}
+
+.signup-tab-btn {
+    width: 30rem;
+    height: 5rem;
+    border: none;
+    background: #E3E3E3;
+}
+
+.login-form-container {
+    width: 60rem;
+}
+
+.login-form {
+    position: relative;
+    width: 100%;
+}
+
+.login-input {
+    border: 0.1rem solid #FAB84C;
+    height: 5rem;
+    width: 100%;
+    outline: none;
+    padding: 0 1rem;
+}
+
+.login-input-btn {
+    position: absolute;
+    right: 0;
+    height: 100%;
+    width: 5rem;
+    background: #FAB84C;
+    border: none;
+    border-left: 0.1rem solid #FAB84C;
+    color: white;
+}
+
+.login-input-select {
+    outline: none;
+    border: none;
+    background: none;
+    padding: 0 1rem;
+    border: 0.1rem solid #FAB84C;
+    border-right: 0;
+    height: 5rem;
+}
+
+.google-tab-btn {
+    width: 29.5rem;
+    height: 5rem;
+    border: none;
+    box-shadow: 0px 1px 5px 1px #e0e0e0;
+    background: none;
+}
+
+.facebook-tab-btn {
+    width: 29.5rem;
+    height: 5rem;
+    border: none;
+    box-shadow: 0px 1px 5px 1px #e0e0e0;
+    background: none;
+}
+
+.email-tab-btn {
+    width: 60rem;
+    height: 5rem;
+    border: none;
+    box-shadow: 0px 1px 5px 1px #e0e0e0;
+    background: none;
+}
+
+.login-or-dash {
+    width: 30rem;
+    height: 0.1rem;
+    border-top: 0.01rem solid #999999;
+}
+
+.login-icons {
+    height: 3rem;
 }
