--- a/src/Profile/profile.css
+++ b/src/Profile/profile.css
@@ -45,7 +45,7 @@ background-color:rgb(250,184,76);
 }
 
 
-/* right side white screen */
+/* ---------------right side white screen--------------- */
 
 
 
@@ -94,20 +94,20 @@ background-color:rgb(250,184,76);
 
 
 
-/* profile With no Order screen */
+/* -----------profile With no Order screen---------------- */
 
 .no-order-text{
     text-align: center;
    line-height: 4rem;
    color: #6d6d6d;
-   margin-top: 10rem;
+   margin-top: 8rem;
 }
 .panda-img{
     margin-top: 10rem;
     text-align: center;
 }
 
-/* profile with some orders */
+/* --------------profile with some orders---------------- */
 
 .left{
     text-align: left;
@@ -167,7 +167,7 @@ background-color:rgb(250,184,76);
 }
 
 
-/* address screen */
+/*------------------ Address screen------------------ */
 .button-container{
     text-align: center;
     margin-top: 4rem;
@@ -211,4 +211,51 @@ background-color:rgb(250,184,76);
 
  }
 
+}
+
+/* ----------Notification screen-------------- */
+
+.switch{
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.toggle-slider{
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    background-color: #ccc;
+    transition: 0.4s;
+    border-radius: 100px;
+}
+
+.toggle-slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left:4px;
+    bottom: 4px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 100px;
+}
+input:checked + .toggle-slider{
+    background-color: #D72525;
+}
+input:checked + .toggle-slider:before{
+    transform: translateX(26px);
 }
