--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -12,6 +12,7 @@
 
 .normal-font {
     font-size: var(--sm-font);
+    box-shadow: 0px -5px 10px rgb(211, 209, 209);
 }
 
 .small-font {
@@ -31,9 +32,12 @@ ul li {
 /* -------------footer-css----------- */
 
 .footer-download-container {
-    background-color: #FAB84C;
+    background-color: black;
     height: 8rem;
-    width: 30rem;
+    width: 30rem; 
+}
+footer{
+    background-color: white;
 }
 
 .footer-download-icons {
