--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -1,57 +1,70 @@
-.logo{
-    width:200px;
-    height:60px
-}
-.btn{
-    padding: 0.5rem 1.4rem;
-    color: #FCFCFC;
-}
-.btn:hover{
-    color: #FCFCFC;
-    box-shadow: 1px 1px 5px gray;
-}
-.bg-white{
-    background-color: #FCFCFC;
-}
-a{
-    font-size: 1.6rem;
-    color: black;
-    text-decoration: none;
-    line-height: 2.5rem;
-}
-a:hover{
-    color: #ffc107;
-    text-shadow:1px 1px 1px #ffc107 ;
-}
-.navbar{
-    box-shadow: 1px 1px 10px rgb(184, 184, 184);
-    padding: 0rem;
-    margin-bottom: 3.5rem;
-}
-.navbar-brand{
-    padding: 0rem;
-}
-.location{
-    font-size: 1.2rem;
-}
-.search-bar{
-    margin-bottom:2.5rem ;
-}
-.search{
-    background-color: rgba(252, 225, 158, 0.356);
-    min-height: 4rem;
-}
-.services{
-    font-size: 1.6rem;
-
-}
-.round{
-    border-radius: 100%;
+.navlink-logo {
+  padding: 0;
 }
 
- @media (max-width:400px){
-    .logo{
-        width:25rem;
-        height:8rem
-    }
- }
+.navlink-logo.active {
+  padding: 0;
+}
+
+.logo {
+  width: 200px;
+  height: 60px;
+}
+
+.btn {
+  padding: 0.5rem 1.4rem;
+  color: #fcfcfc;
+}
+.btn:hover {
+  color: #fcfcfc;
+  box-shadow: 1px 1px 5px gray;
+}
+.bg-white {
+  background-color: #fcfcfc;
+}
+a {
+  font-size: 1.6rem;
+  color: black;
+  text-decoration: none;
+  line-height: 2.5rem;
+}
+a:hover {
+  color: #ffc107;
+  text-shadow: 1px 1px 1px #ffc107;
+}
+.navbar {
+  box-shadow: 1px 1px 10px rgb(184, 184, 184);
+  padding: 0rem;
+  margin-bottom: 3.5rem;
+}
+.navbar-brand {
+  padding: 0rem;
+}
+.location {
+  font-size: 1.2rem;
+}
+.search-bar {
+  margin-bottom: 2.5rem;
+}
+.search {
+  background-color: rgba(252, 225, 158, 0.356);
+  min-height: 4rem;
+}
+.services {
+  font-size: 1.6rem;
+}
+.round {
+  border-radius: 100%;
+}
+
+.blog {
+  font-size: 1.6rem;
+  color: #000;
+}
+
+@media (max-width: 400px) {
+  .logo {
+    width: 25rem;
+    height: 8rem;
+  }
+}
