--- a/src/index.css
+++ b/src/index.css
@@ -79,14 +79,17 @@ time,
 mark,
 audio,
 video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
+body {
+  overflow-x: hidden;
+}
 
 /* HTML5 display-role reset for older browsers */
 
@@ -101,108 +104,111 @@ hgroup,
 menu,
 nav,
 section {
-    display: block;
+  display: block;
 }
 
 body {
-    line-height: 1;
+  line-height: 1;
 }
 
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 blockquote,
 q {
-    quotes: none;
+  quotes: none;
 }
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-    content: '';
-    content: none;
+  content: '';
+  content: none;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
 html,
 body {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 :root {
-    --xxs-font: 1.2rem;
-    --xs-font: 1.4rem;
-    --s-font: 1.6rem;
-    --sm-font: 1.8rem;
-    --m-font: 2rem;
-    --ml-font: 2.2rem;
-    --l-font: 2.4rem;
-    --xl-font: 2.8rem;
-    --xxl-font: 3rem;
+  --xxs-font: 1.2rem;
+  --xs-font: 1.4rem;
+  --s-font: 1.6rem;
+  --sm-font: 1.8rem;
+  --m-font: 2rem;
+  --ml-font: 2.2rem;
+  --l-font: 2.4rem;
+  --xl-font: 2.8rem;
+  --xxl-font: 3rem;
 }
 
-@media (max-width:1599.98px) {
-    html,
-    body {
-        font-size: 50%;
-    }
+@media (max-width: 1599.98px) {
+  html,
+  body {
+    font-size: 50%;
+  }
 }
 
 @media (max-width: 1399.98px) {
-    html,
-    body {
-        font-size: 43%;
-    }
+  html,
+  body {
+    font-size: 43%;
+  }
 }
 
 @media (max-width: 1199.98px) {
-    html,
-    body {
-        font-size: 35%;
-    }
+  html,
+  body {
+    font-size: 35%;
+  }
 }
 
 @media (max-width: 991.98px) {
-    html,
-    body {
-        font-size: 25%;
-    }
+  html,
+  body {
+    font-size: 25%;
+  }
 }
 
 @media (max-width: 767.98px) {
-    html,
-    body {
-        font-size: 35%;
-    }
+  html,
+  body {
+    font-size: 35%;
+  }
 }
 
 @media (max-width: 575.98px) {
-    html,
-    body {
-        font-size: 27%;
-    }
+  html,
+  body {
+    font-size: 27%;
+  }
 }
 
 .main-container {
-    width: 85%;
-    height: auto;
-    margin: auto;
+  width: 85%;
+  height: auto;
+  margin: auto;
 }
