--- a/src/components/Blogs/BlogFilter/BlogFilter.css
+++ b/src/components/Blogs/BlogFilter/BlogFilter.css
@@ -19,6 +19,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition-duration: 300ms;
+  transform: translateX(200px);
 }
 
 .blog-filter h1 {
