--- a/src/components/RestaurantsDetail/Menu/MenuList/MenuItem.css
+++ b/src/components/RestaurantsDetail/Menu/MenuList/MenuItem.css
@@ -81,7 +81,8 @@
 .menu-list__description {
   margin-left: 2rem;
   font-size: 12px;
-  width: 70%;
+  width: 90%;
+  height: 40px;
   color: #000;
   letter-spacing: 0;
 }
