--- a/src/components/RestaurantsDetail/Menu/Cart/CartLink/CartLink.css
+++ b/src/components/RestaurantsDetail/Menu/Cart/CartLink/CartLink.css
@@ -12,11 +12,11 @@
 }
 
 .cart-info__footer-logo svg {
-  font-size: 25px;
+  font-size: 32px;
 }
 
 .logo-badge {
-  font-size: 9px;
+  font-size: 16px;
   position: absolute;
   top: -12px;
   left: 25px;
@@ -35,7 +35,12 @@
 .cart-info__footer-btn {
   border: 1px solid #000;
   border-radius: 5px;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 1.5rem 0;
+  display: inline-block;
+  width: 100px;
+  font-size: 16px;
+  text-align: center;
+  height: 32px;
 }
 
 .cart-info__footer-btn:hover {
